--- a/index.html
+++ b/index.html
@@ -117,7 +117,16 @@
         if (username.value.trim() === '') {
           showError(username, 'Username is required');
           isValid = false;
-        } else {
+        }
+        else if (username.value.length < 3) {
+          showError(username, 'Username must be at least 3 characters');
+          isValid = false;
+        }
+        else if (!/^[a-zA-Z ]+$/.test(username.value.trim())) {
+          showError(username, 'Username can only contain letters');
+          isValid = false;
+        }
+         else {
           showSuccess(username);
         }
     
@@ -134,7 +143,20 @@
         if (dob.value === '') {
           showError(dob, 'Date of birth is required');
           isValid = false;
-        } else {
+        }
+        else if (new Date(dob.value) > new Date()) {
+          showError(dob, 'Date of birth cannot be in the future');
+          isValid = false;
+        }
+        else if (new Date(dob.value) < new Date('1900-01-01')) {
+          showError(dob, 'Date of birth is not valid');
+          isValid = false;
+        }
+        else if (new Date(dob.value) > new Date(new Date().setFullYear(new Date().getFullYear() - 18))) {
+          showError(dob, 'You must be at least 18 years old');
+          isValid = false;
+        }
+         else {
           showSuccess(dob);
         }
     
